--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
     height: 100%;
 }
 body {
-    background: rgb(65, 7, 223);
+    background: #fff;
     padding: 0;
     margin: 0;
     font-family: 'Varela Round', sans-serif;
@@ -146,8 +146,15 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 }
 .test { 
         width: 300px;
-      }
-    .maintest   {
+        }
+.maintest   {
         width: 300px;
         padding: 25px;
-      }
+}
+.testmain div{
+    width: 300px;
+    padding:25px;
+    letter-spacing: 2px;
+    text-align: center;
+    font-size: 20px;
+}
