--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 .mainInner{
     display: table;
-    height: 100%;
+    height: 50%;
     width: 100%;
     text-align: center;
 }
@@ -156,5 +156,35 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     padding:25px;
     letter-spacing: 2px;
     text-align: center;
-    font-size: 20px;
+    font-size: 10px;
+
+}
+.hobby { 
+    width: 300px;
+    }
+.mainhobby   {
+    width: 300px;
+    padding: 25px;
+}
+.hobbymain div{
+width: 300px;
+padding:25px;
+letter-spacing: 2px;
+text-align: center;
+font-size: 20px;
+
+}
+.aboutme { 
+    width: 300px;
+    }
+.mainaboutme  {
+    width: 300px;
+    padding: 25px;
+}
+.aboutmemain div{
+width: 300px;
+padding:25px;
+letter-spacing: 2px;
+text-align: center;
+font-size: 10px;
 }
