--- a/style.css
+++ b/style.css
@@ -188,3 +188,15 @@ letter-spacing: 2px;
 text-align: center;
 font-size: 10px;
 }
+h1 {
+    color: #FC466B;
+}
+
+h2 {
+    color:firebrick;
+
+}
+
+h3 {
+    color:rgba(255, 255, 255, 0.10);
+}
